--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "eshop backend",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Djumakulov Danisher",
