--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
+    "epic-spinners": "^2.0.0",
     "swiper": "^10.0.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
