--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "compressorjs": "^1.2.1",
     "core-js": "^3.8.3",
     "epic-spinners": "^2.0.0",
     "swiper": "^10.0.4",
