--- a/admin/package.json
+++ b/admin/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "browser-image-compression": "^2.0.2",
     "core-js": "^3.8.3",
     "epic-spinners": "^2.0.0",
     "vue": "^3.2.13",
